--- a/README
+++ b/README
@@ -32,8 +32,7 @@ ADDED:
 
 Here's a walkthrough of implemented user stories:
 
-<img src='https://imgur.com/a/x2oNQ3u' title='Video Walkthrough' width='' alt='Video Walkthrough' />
-
+<blockquote class="imgur-embed-pub" lang="en" data-id="a/x2oNQ3u"><a href="//imgur.com/x2oNQ3u">my first app</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 GIF created with [LiceCap](http://www.cockos.com/licecap/).
 
 ## Notes
