--- a/README
+++ b/README
@@ -32,8 +32,9 @@ ADDED:
 
 Here's a walkthrough of implemented user stories:
 
-<blockquote class="imgur-embed-pub" lang="en" data-id="a/x2oNQ3u"><a href="//imgur.com/x2oNQ3u">my first app</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-GIF created with [LiceCap](http://www.cockos.com/licecap/).
+<a href="https://imgur.com/MUybp4z"><img src="https://i.imgur.com/MUybp4z.gif" title="source: imgur.com" /></a>GIF 
+
+created with [LiceCap](http://www.cockos.com/licecap/).
 
 ## Notes
 
