--- a/README
+++ b/README
@@ -32,7 +32,7 @@ ADDED:
 
 Here's a walkthrough of implemented user stories:
 
-![](tipMeRecording4.gif)
+<a href="https://imgur.com/MUybp4z"><img src="https://i.imgur.com/MUybp4z.gif" title="source: imgur.com" /></a>
 
 created with [LiceCap](http://www.cockos.com/licecap/).
 
